done adding search function and movie streaming

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Book My Show Clone Using React"
     />
-    <title>Book My Show</title>
+    <title>Do Not Book My Show</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
